# ai-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: demo.html  index.html
src/: ai_utils.rs  cli.rs  context.rs  git_utils.rs  main.rs  security.rs
src/mcp/: client.rs  mod.rs  protocol.rs  tools.rs
tests/: git_test.rs  integration_test.rs
